# AI-Coding-Orchestrator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_ROADMAP.md  PHASE_0_SUMMARY.md  README.md  multi-agent-coding.md  pyproject.toml  session-work.md
.github/workflows/: ci.yml
src/orchestrator/: __init__.py  cli.py
src/orchestrator/agentic/: __init__.py
src/orchestrator/classifier/: __init__.py  agent_assigner.py  task_classifier.py
src/orchestrator/comparison/: __init__.py  engine.py  metrics.py
src/orchestrator/config/: __init__.py  generator.py
src/orchestrator/core/: models.py
src/orchestrator/data/: agents.yaml  task_taxonomy.yaml
src/orchestrator/execution/: __init__.py  coordinator.py  prompts.py
src/orchestrator/mcp/: __init__.py
src/orchestrator/parser/: __init__.py  plan_parser.py
src/orchestrator/plugins/: __init__.py
src/orchestrator/review/: __init__.py
src/orchestrator/schemas/: plan_schema.json
src/orchestrator/templates/: agents.md.j2  claude.md.j2  clinerules.j2  copilot-instructions.md.j2  cursorrules.j2  gemini-settings.json.j2  windsurfrules.j2
src/orchestrator/validation/: __init__.py
src/orchestrator/worktree/: __init__.py  manager.py
tests/: __init__.py  test_cli.py
tests/classifier/: __init__.py  test_agent_assigner.py  test_task_classifier.py
tests/comparison/: test_engine.py  test_metrics.py
tests/config/: test_generator.py
tests/execution/: test_coordinator.py  test_prompts.py
tests/fixtures/: simple_plan.md
tests/parser/: test_plan_parser.py
tests/worktree/: test_manager.py
