[tool.poetry]
name = "ai-coding-orchestrator"
version = "0.1.0"
description = "A tool to orchestrate multiple AI coding assistants for multi-agent development workflows"
authors = ["AI Orchestration Development Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/ai-coding-orchestrator"
repository = "https://github.com/yourusername/ai-coding-orchestrator"
keywords = ["ai", "coding", "orchestration", "multi-agent", "claude", "cursor", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [{include = "orchestrator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
markdown = "^3.5.2"
jsonschema = "^4.21.1"
gitpython = "^3.1.42"
pydantic = "^2.6.3"
rich = "^13.7.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
bandit = "^1.7.8"
pre-commit = "^3.6.2"
types-pyyaml = "^6.0.12"
types-markdown = "^3.5.0"

[tool.poetry.scripts]
orchestrator = "orchestrator.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["orchestrator"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=orchestrator --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # assert_used (we use it in tests)
